async post of copernicus dataset parts
- Async parallel post of Copernicus dataset parts
- Creation of a globals package
- Generation of a sha256 key for Copernicus datasets to avoid downloading already existing ones
